# CFDCodes

./: README.md
Gauss/include/: GaussSolver.h  LUSolver.h  Vector.h
Gauss/src/: CMakeLists.txt  GaussSolver.cpp  LUSolver.cpp  Matrix.cpp
SolvingSystemOfAlgebraicEquations/: CMakeLists.txt  config.ini  main.cpp  main_AdvectionDiffusion.cpp
SolvingSystemOfAlgebraicEquations/include/: ExplicitSchemes.h  FdMatrix.h  FdMatrixI.h  Field.h  FieldI.h  GaussSeidelSolver.h  GaussSolver.h  ISolver.h  ImplicitSchemes.h  JacobiSolver.h  LUSolver.h  LoadConfig.h  Matrix.h  MatrixI.h  Mesh.h  MeshI.h  Vector.h  VectorI.h
SolvingSystemOfAlgebraicEquations/src/: ExplicitSchemes.cpp  FdMatrix.cpp  Field.cpp  GaussSeidelSolver.cpp  GaussSolver.cpp  ISolver.cpp  ImplicitSchemes.cpp  JacobiSolver.cpp  LUSolver.cpp  LoadConfig.cpp  Matrix.cpp  Mesh.cpp  Vector.cpp
